--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "multer": "^2.0.1"
   },
   "name": "filetransferwithmulter",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
